# django-model-versioning

./: .gitignore  README.md  pyproject.toml  requirements.txt
django_model_versioning/: manage.py
django_model_versioning/config/: database_config_sample.py
django_model_versioning/django_model_versioning/: settings.py
django_model_versioning/lib/: apps.py  config.py  core.py  fields.py  register.py  signals.py  types.py  versioned_foreign_key.py  versioned_model.py  versioning_field.py  versioning_options.py
django_model_versioning/payments/: models.py
django_model_versioning/payments/migrations/: 0001_initial.py
django_model_versioning/products/: models.py
django_model_versioning/products/migrations/: 0001_initial.py
django_model_versioning/taxes/: models.py  versioning.py
django_model_versioning/taxes/migrations/: 0001_initial.py  0002_tax__persisted_id.py
django_model_versioning/tests/: test_initialization_errors.py  test_model_gets_versioned.py  test_sample_application.py
sample_application/: manage.py
sample_application/config/: database_config_sample.py
sample_application/payments/: models.py
sample_application/payments/migrations/: 0001_initial.py
sample_application/products/migrations/: 0001_initial.py
sample_application/sample_application/: asgi.py  settings.py  urls.py  wsgi.py
sample_application/tests/: test_sample_application.py
