[tool.poetry]
name = "django-model-versioning"
version = "0.1.0"
description = "A library to version a specific model, with references to specific and/or last version of it"
authors = ["Emanuele Manfredini <emanuele.manfredini.1992@gmail.com>"]
license = "GPLv3"
repository = "https://github.com/tavearn/django-model-versioning"
homepage = "https://github.com/tavearn/django-model-versioning"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    {include = "django_model_versioning/lib"}
]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
